ISSUE-415 WS feedback for import (#550)